[project]
name = "public-ip-logger"
version = "1.1.9"
description = "Log public IP address in SQLite database"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "dataset>=1.6.2",
    "humanize>=4.12.3",
    "ping3>=5.1.5",
    "platformdirs>=4.3.8",
    "requests>=2.32.5",
]

[project.scripts]
public-ip-logger = "ip_to_sqlite:main"
